更新 vue 打包lib 和部署vue 相关

--- a/_posts/2019-02-27-ngxin-部署-vue-静态文件失效.md
+++ b/_posts/2019-02-27-ngxin-部署-vue-静态文件失效.md
@@ -202,6 +202,18 @@ http {
    COPY build/nginx.conf /etc/nginx/nginx.conf
    ```
 
+   构建 docker image
+   ``` shell
+    // -t 指定了镜像 tag 为 docker-vue:v1.0.0
+    // . 代表着当前目录
+    docker build -t docker-vue:v1.0.0 .
+   ```
+   启动容器
+   ``` shell
+    // -d 后台运行容器，并返回容器ID
+    docker run -p 88:80 -d docker-vue:v1.0.0
+   ```
+
 5.  本地浏览器访问 `http://xxxx.com`
 
 
