--- a/_posts/2019-03-01-打包一个-vue-组件库.md
+++ b/_posts/2019-03-01-打包一个-vue-组件库.md
@@ -136,6 +136,70 @@ yarn build --target lib --name myLib [entry]
 
 ![image-20190304134559697](/images/image-20190304134559697.png)
 
+**测试还未发布的包**
+``` shell
+yarn add file:/Users/owenliu/lehui/myLib/
+```
+执行完 yarn add 之后，使用此 lib 的项目的 package.json 的内容：
+![2019-04-10-17-22-23](/images/2019-04-10-17-22-23.png)
+
+
+**更改配置**
+![2019-04-10-17-19-10](/images/2019-04-10-17-19-10.png)
+
+**构建告警**
+文件大小超出限制
+```
+asset size limit: The following asset(s) exceed the recommended size limit (244 KiB).
+This can impact web performance.
+Assets: 
+  answer.common.js (482 KiB)
+```
+方式一  vue.config.js 的 configureWebpack 字段中添加如下配置
+```
+module.exports = {
+  configureWebpack: {
+    performance: {
+      hints: false
+    }
+  }
+}
+```
+方式二 vue.config.js 的 configureWebpack 字段中添加如下配置
+```
+module.exports = {
+  configureWebpack: {
+    performance: {
+      hints: "warning", // 枚举
+      maxAssetSize: 30000000, // 整数类型（以字节为单位）
+      maxEntrypointSize: 50000000, // 整数类型（以字节为单位）
+      assetFilter: function(assetFilename) {
+        // 提供资源文件名的断言函数
+        return assetFilename.endsWith('.css') || assetFilename.endsWith('.js');
+
+      }
+    }
+  }
+}
+
+```
+WebPack 警告WARNING in asset size limit: The following asset(s) exceed the recommended size limit (244 KiB).解决
+
+
+最近在使用新版vue的命令行工具创建项目时，安装chromedriver老是失败，导致后面的步骤也没有进行。网上搜索了一下，全是使用
+
+`npm install chromedriver --chromedriver_cdnurl=http://cdn.npm.taobao.org/dist/chromedriver`
+安装的，由于@vue/cli安装chromedriver失败，文件目录结构都不完整，所以必须一步成功，不能后面再装chromedriver。
+看了一下chromedriver包的源码，程序判断了一下npm有没有设置过npm_config_chromedriver_cdnurl，如果设置过，就从配置的源安装。
+
+
+设置 `npm config set chromedriver_cdnurl=http://cdn.npm.taobao.org/dist/chromedriver`
+设置 `yarn config set "chromedriver_cdnurl" "https://npm.taobao.org/mirrors/chromedriver"`
+这样就可以使用 @vue/cli 成功搭建项目了。
+
+
+
+
 参考文章：
 
 [[NPM package.json属性详解](https://www.cnblogs.com/tzyy/p/5193811.html)](https://www.cnblogs.com/tzyy/p/5193811.html)
@@ -148,3 +212,6 @@ yarn build --target lib --name myLib [entry]
 
 [**vue-cli Github** ](https://github.com/vuejs/vue-cli/blob/dev/docs/zh/README.md)
 
+[WebPack 警告WARNING in asset size limit](https://blog.csdn.net/pcaxb/article/details/81775334)
+
+[解决@vue/cli 创建项目是安装chromedriver时失败的问题](https://segmentfault.com/a/1190000013289136)
