整理分类和标签

--- a/_posts/2019-02-26-并发和并行的区别.md
+++ b/_posts/2019-02-26-并发和并行的区别.md
@@ -2,7 +2,10 @@
 layout: post
 title:  "并发和并行的区别 "
 date:   2019-02-25 14:16:23 +0800
-categories: jekyll update
+categories: Linux
+tags:
+  - 并发
+  - 并行
 Autor: "owenliu"
 typora-root-url: ../../owenliu1122.github.io
 ---
