--- a/_posts/2019-02-27-ngxin-部署-vue-静态文件失效.md
+++ b/_posts/2019-02-27-ngxin-部署-vue-静态文件失效.md
@@ -4,13 +4,15 @@ title:  "nginx 部署 vue 笔记"
 date:   2019-02-28 12:16:23 +0800
 categories: Vue
 tags: 
-  - nginx
-  - vue
-  - docker
+  - Nginx
+  - Vue
+  - Docker
 Autor: "owenliu"
 typora-root-url: ../../owenliu1122.github.io
 typora-copy-images-to: ../images
 ---
+
+Vue 项目写完后，打包并且使用 Nginx 部署测试打包程序的 dist，同时反向代理后端 API 域名以解决跨域。
 
 ## 解决跨域：
 
