--- a/_posts/2019-03-01-打包一个-vue-组件库.md
+++ b/_posts/2019-03-01-打包一个-vue-组件库.md
@@ -4,14 +4,14 @@ title:  "打包一个 vue 组件库"
 date:   2019-03-01 12:16:23 +0800
 categories: Vue
 tags: 
-  - lib
-  - vue
+  - Lib
+  - Vue
 Autor: "owenliu"
 typora-root-url: ../../owenliu1122.github.io
 typora-copy-images-to: ../images
 ---
 
-
+开发 Vue 过程打包一个组件库的亲身经历，特记录在此，以备后用。
 
 ## 初次尝试
 
