--- a/_posts/2019-03-29-网络及端口相关命令.md
+++ b/_posts/2019-03-29-网络及端口相关命令.md
@@ -11,6 +11,8 @@ typora-root-url: ../../owenliu1122.github.io
 typora-copy-images-to: ../images
 ---
 
+本文记录使用 losof 和 netstat 查看占用端口进程的命令
+
 # MacOS 命令运维笔记
 
 ## 查看端口占用进程
