--- a/_posts/2019-03-01-打包一个-vue-组件库.md
+++ b/_posts/2019-03-01-打包一个-vue-组件库.md
@@ -18,18 +18,20 @@ typora-copy-images-to: ../images
 打包一个 vue 组件库 ([@vue/cli-server](https://cli.vuejs.org/zh/guide/build-targets.html#%E5%BA%93))
 
 安装 vue-cli-server
+
 ``` shell
  yarn global add @vue/cli-service
 ```
 
 构建 lib
-```
+
+``` shell
 vue-cli-service build --target lib --name myLib xxxComponent.vue
 ```
 
-
 报错
-```
+
+``` shell
 ⠋  Building for production as library (commonjs,umd,umd-min)... ERROR  Error: Cannot find module 'vue-template-compiler/package.json'
 Error: Cannot find module 'vue-template-compiler/package.json'
     at Function.Module._resolveFilename (internal/modules/cjs/loader.js:603:15)
@@ -53,7 +55,7 @@ yarn global add vue-template-compiler
 
 再次构建 lib，依然报错
 
-```
+``` shell
 Failed to resolve loader: cache-loader
 You may need to install it.
  ERROR  Build failed with errors.
@@ -75,8 +77,6 @@ yarn global add cache-loader
 
 [引用方式](https://blog.csdn.net/milugloomy/article/details/84635717)
 
-
-
 首先我们编辑入口文件 `src/index.js`, 使其被作为 UI 库导入时能自动在 Vue 中注册我们的 Component:
 
 ``` javascript
@@ -94,8 +94,6 @@ export default Components
 
 ```
 
-
-
 ## 最终解决方案
 
 参考 [vue-cli 官方文档](https://cli.vuejs.org/zh/guide/creating-a-project.html#vue-create)
@@ -109,8 +107,6 @@ vue init webpack project_name
 使用这种方式创建项目的目录结构是这样的：
 
 ![image-20190304132801452](/images/image-20190304132801452.png)
-
-
 
 现在 vue-cli 3.x 的方法是：
 
@@ -136,27 +132,31 @@ yarn build --target lib --name myLib [entry]
 
 ![image-20190304134559697](/images/image-20190304134559697.png)
 
-**测试还未发布的包**
+* 测试还未发布的包 *
+
 ``` shell
 yarn add file:/Users/owenliu/lehui/myLib/
 ```
+
 执行完 yarn add 之后，使用此 lib 的项目的 package.json 的内容：
 ![2019-04-10-17-22-23](/images/2019-04-10-17-22-23.png)
-
 
 **更改配置**
 ![2019-04-10-17-19-10](/images/2019-04-10-17-19-10.png)
 
 **构建告警**
 文件大小超出限制
-```
+
+``` shell
 asset size limit: The following asset(s) exceed the recommended size limit (244 KiB).
 This can impact web performance.
 Assets: 
   answer.common.js (482 KiB)
 ```
+
 方式一  vue.config.js 的 configureWebpack 字段中添加如下配置
-```
+
+``` js
 module.exports = {
   configureWebpack: {
     performance: {
@@ -165,8 +165,10 @@ module.exports = {
   }
 }
 ```
+
 方式二 vue.config.js 的 configureWebpack 字段中添加如下配置
-```
+
+``` js
 module.exports = {
   configureWebpack: {
     performance: {
@@ -183,8 +185,8 @@ module.exports = {
 }
 
 ```
-WebPack 警告WARNING in asset size limit: The following asset(s) exceed the recommended size limit (244 KiB).解决
 
+WebPack 警告WARNING in asset size limit: The following asset(s) exceed the recommended size limit (244 KiB).解决
 
 最近在使用新版vue的命令行工具创建项目时，安装chromedriver老是失败，导致后面的步骤也没有进行。网上搜索了一下，全是使用
 
@@ -192,17 +194,13 @@ WebPack 警告WARNING in asset size limit: The following asset(s) exceed the re
 安装的，由于@vue/cli安装chromedriver失败，文件目录结构都不完整，所以必须一步成功，不能后面再装chromedriver。
 看了一下chromedriver包的源码，程序判断了一下npm有没有设置过npm_config_chromedriver_cdnurl，如果设置过，就从配置的源安装。
 
-
 设置 `npm config set chromedriver_cdnurl=http://cdn.npm.taobao.org/dist/chromedriver`
 设置 `yarn config set "chromedriver_cdnurl" "https://npm.taobao.org/mirrors/chromedriver"`
 这样就可以使用 @vue/cli 成功搭建项目了。
 
-
-
-
 参考文章：
 
-[[NPM package.json属性详解](https://www.cnblogs.com/tzyy/p/5193811.html)](https://www.cnblogs.com/tzyy/p/5193811.html)
+[[NPM package.json属性详解](<https://www.cnblogs.com/tzyy/p/5193811.html)](https://www.cnblogs.com/tzyy/p/5193811.html)>
 
 [VueCli 构建目标](https://cli.vuejs.org/zh/guide/build-targets.html#%E5%BA%93)
 
@@ -210,7 +208,7 @@ WebPack 警告WARNING in asset size limit: The following asset(s) exceed the re
 
 [vue-cli 3.x配置跨域代理](https://segmentfault.com/a/1190000014474361)
 
-[**vue-cli Github** ](https://github.com/vuejs/vue-cli/blob/dev/docs/zh/README.md)
+[vue-cli Github](https://github.com/vuejs/vue-cli/blob/dev/docs/zh/README.md)
 
 [WebPack 警告WARNING in asset size limit](https://blog.csdn.net/pcaxb/article/details/81775334)
 
