--- a/_posts/2019-03-29-网络及端口相关命令.md
+++ b/_posts/2019-03-29-网络及端口相关命令.md
@@ -13,29 +13,38 @@ typora-copy-images-to: ../images
 
 本文记录使用 losof 和 netstat 查看占用端口进程的命令
 
-# MacOS 命令运维笔记
+MacOS 命令运维笔记
 
 ## 查看端口占用进程
+
 ### lsof
+
 例如查看占用 8000 端口的进程
+
 ``` shell
 lsof -i tcp:8000
 COMMAND  PID    USER   FD   TYPE             DEVICE SIZE/OFF NODE NAME
 xxx xxxx xxx
 ```
+
 然后杀死进程就可以了
+
 ``` shell
 kill PID
 ```
+
 ### netstat
+
 ``` shell
 stat -tnlp | grep 3306
 tcp6       0      0 :::3306                 :::*                    LISTEN      21609/docker-proxy
 ```
+
 占用 3306 端口的就是 PID 为21609 的进程 docker-proxy
 
-*netstat命令各个参数说明如下：*
-```
+* netstat命令各个参数说明如下：*
+
+``` shell
 　　-t : 指明显示TCP端口
 　　-u : 指明显示UDP端口
 　　-l : 仅显示监听套接字(所谓套接字就是使应用程序能够读写与收发通讯协议(protocol)与资料的程序)
@@ -44,31 +53,37 @@ tcp6       0      0 :::3306                 :::*                    LISTEN      
 ```
 
 即可显示当前服务器上所有端口及进程服务，于grep结合可查看某个具体端口及服务情况
-```
+
+``` shell
 netstat -ntlp   //查看当前所有tcp端口·
 netstat -ntulp |grep 80   //查看所有80端口使用情况·
 netstat -an | grep 3306   //查看所有3306端口使用情况·
 ```
 
 查看一台服务器上面哪些服务及端口
-```
+
+``` shell
 netstat  -lanp
 ```
 
 查看一个服务有几个端口。比如要查看mysqld
-```
+
+``` shell
 ps -ef |grep mysqld
 ```
+
 查看某一端口的连接数量,比如3306端口
-```
+
+``` shell
 netstat -pnt |grep :3306 |wc
 ```
+
 查看某一端口的连接客户端IP 比如3306端口
-```
+
+``` shell
 netstat -anp |grep 3306
-netstat -an 查看网络端口 
+netstat -an 查看网络端口
 netstat -nupl  (UDP类型的端口)
 netstat -ntpl  (TCP类型的端口)
 netstat -anp 显示系统端口使用情况
 ```
-
