vim 删除单词功能

--- a/_posts/2019-12-26-Vim-快捷键集合.md
+++ b/_posts/2019-12-26-Vim-快捷键集合.md
@@ -153,6 +153,10 @@ vim中有一些特殊字符在查找时需要转义　　.*[]^%/?~$
 |X |删除当前字符的前一个字符。X=dh|
 |dl |删除当前字符， |
 |dh |删除前一个字符|
+|dw 或 daw |删除一个单词|
+|diw |删除一个单词,  不包括空行|
+|dt<char> |删除到指定字符前，例如 deviceID，如果 dtD，就删除了 deviceI，只剩 D 字符了|
+|d<n>w |删除 n 个单词|
 |dd |删除当前行|
 |dj |删除上一行|
 |dk |删除下一行|
